refactor: CRUD APIs refactor with error treatment
