# app/Infrastructure/Repositories/CustomerRepositoryInterface.php
@@ -2,6 +2,7 @@
 
 namespace App\Infrastructure\Repositories;
 
+use App\Domain\Collections\CustomerCollection;
 use App\Domain\Entities\Customer;
 use App\Domain\ValueObjects\CustomerId;
 use App\Domain\ValueObjects\Pagination;
@@ -10,9 +11,9 @@ interface CustomerRepositoryInterface
 {
     public function getCustomersOverview(?Pagination $pagination = null): array;
 
-    public function getCustomer(CustomerId $customerId): array;
+    public function getCustomer(CustomerId $customerId): CustomerCollection;
 
-    public function updateCustomer(Customer $customerData): array;
+    public function updateCustomer(CustomerId $customerId, array $customerData): array;
 
     public function deleteCustomer(CustomerId $customerId): bool;
 }
